# lopdf

./: Cargo.toml  README.md
examples/: analyze_object_streams.rs  analyze_page_contents.rs  analyze_pdf.rs  analyze_references.rs  check_raw_objstream.rs  compress_existing_pdf.rs  create_text_heavy_pdf.rs  debug_compression_detailed.rs  debug_compression_full.rs  debug_save_with_objstreams.rs  encrypt.rs  final_compression_test.rs  inspect_object_stream.rs  replace_partial_text.rs  test_better_compression.rs  test_decryption.rs  test_direct_objstream.rs  test_filter_roundtrip.rs  test_metadata.rs  test_object_stream_creation.rs  test_object_stream_roundtrip.rs  test_real_pdf_compression_with_fix.rs  test_structural_compression.rs  verify_decryption.rs  verify_page_compression.rs  verify_pdf.rs
src/: encryption.rs  lib.rs  object.rs  object_stream.rs  parser_aux.rs  reader.rs
src/encryption/: algorithms.rs  crypt_filters.rs
tests/: catalog_compression_integration_test.rs  decryption.rs  trailer_reference_compression_test.rs
