[package]
name = "lopdf"
version = "0.38.1"
authors = [
    "Junfeng Liu <china.liujunfeng@gmail.com>",
    "Emulator <emulator@hotmail.it>",
    "Martin Bammer <bam5wi@bosch.com>",
]
categories = ["text-processing"]
description = "A Rust library for PDF document manipulation."
documentation = "https://docs.rs/crate/lopdf/"
edition = "2024"
homepage = "https://github.com/J-F-Liu/lopdf"
keywords = ["pdf", "editing", "manipulation", "merge"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/J-F-Liu/lopdf.git"
rust-version = "1.85"

[dependencies]
mimalloc = { version = "0.1", optional = true }
aes = "0.8"
bitflags = "2.11"
cbc = "0.1.2"
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "std",
    "clock",
] }
ecb = "0.1"
encoding_rs = "0.8"
flate2 = "1.1"
image = { version = "0.25.10", optional = true }
indexmap = "2.13"
itoa = "1.0"
jiff = { version = "0.2", optional = true }
getrandom = "0.4"
log = "0.4"
md-5 = "0.10"
nom = "8.0"
nom_locate = "5.0"
rand = { version = "0.10" }
rangemap = "1.6"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10"
stringprep = "0.1"
thiserror = "2.0"
time = { version = "0.3.47", features = [
    "formatting",
    "parsing",
], optional = true }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
weezl = "0.1"
ttf-parser = "0.25"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
serde_json = "1.0"
shellexpand = "3.1"
tempfile = "3.20"
wasm-bindgen-test = "0.3"

[features]
async = ["tokio/rt-multi-thread", "tokio/macros"]
chrono = ["dep:chrono"]
default = ["chrono", "jiff", "rayon", "time"]
embed_image = ["image"]
jiff = ["dep:jiff"]
wasm_js = ["getrandom/wasm_js"]
serde = ["dep:serde"]
time = ["dep:time"]
mimalloc = ["dep:mimalloc"]

[[example]]
name = "extract_toc"
required-features = ["serde"]

[[example]]
name = "extract_text"
required-features = ["serde"]

[[example]]
name = "print_annotations"
required-features = ["default"]

[[example]]
name = "rotate"

[badges]
travis-ci = { repository = "J-F-Liu/lopdf" }
